# fyst-trajectories

./: README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: conf.py  coordinate_systems.rst  index.rst  installation.rst  instrument_offsets.rst  overhead_integration.rst  overhead_model.rst  overhead_quickstart.rst  overhead_timeline.rst  planning.rst  quickstart.rst  retune_events.rst  trajectory_examples.rst
docs/api/: coordinates.rst  exceptions.rst  offsets.rst  patterns.rst  planning.rst  plotting.rst  site.rst  trajectory.rst  trajectory_utils.rst
src/fyst_pointing/: __init__.py  coordinates.py  math_utils.py  offsets.py  planning.py  primecam.py  site.py  trajectory.py
src/fyst_pointing/patterns/: configs.py  constant_el.py  daisy.py  pong.py
src/fyst_trajectories/: __init__.py  coordinates.py  exceptions.py  math_utils.py  offsets.py  planning.py  plotting.py  primecam.py  site.py  trajectory.py  trajectory_utils.py
src/fyst_trajectories/overhead/: io.py
src/fyst_trajectories/patterns/: __init__.py  base.py  builder.py  constant_el.py  daisy.py  linear.py  planet.py  pong.py  registry.py  sidereal.py  turnarounds.py  utils.py
src/fyst_trajectories/planning/: daisy.py  pong.py
tests/: conftest.py  test_coordinates.py  test_coordinates_cross_validation.py  test_doc_examples.py  test_exceptions.py  test_inject_retune.py  test_kosma_cross_validation.py  test_offsets.py  test_planning.py  test_primecam.py  test_property_based.py  test_scan_patterns_cross_validation.py  test_site.py  test_sun_avoidance.py  test_trajectory.py  test_trajectory_dynamics.py
tests/overhead/: test_io.py
tests/patterns/: test_builder.py  test_configs.py  test_constant_el.py  test_daisy.py  test_generate_offsets.py  test_linear.py  test_planet.py  test_pong.py  test_registry.py  test_sidereal.py  test_turnarounds.py  test_utils.py
