[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fyst-trajectories"
version = "0.3.0"
description = "Coordinate transformation and trajectory generation for FYST telescope"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Graham Gibson" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "astropy>=5.0",
    "numpy>=1.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
performance = [
    "numba>=0.57",
]
plotting = [
    "matplotlib>=3.5",
    "scipy>=1.9",
]
ephemeris = [
    "jplephem>=2.18",
]
overhead = [
    "healpy>=1.16",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]
dev = [
    "numba>=0.57",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.9",
    "skyfield>=1.45",
    "hypothesis>=6.0",
    "pre-commit>=3.0",
]
all = [
    "fyst-trajectories[ephemeris,plotting,docs,dev,performance,overhead]",
]

[project.urls]
Homepage = "https://github.com/ccatobs/fyst-trajectories"
Documentation = "https://fyst-trajectories.readthedocs.io/"
Repository = "https://github.com/ccatobs/fyst-trajectories"
"Bug Tracker" = "https://github.com/ccatobs/fyst-trajectories/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fyst_trajectories"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (run with --run-slow)",
]
filterwarnings = [
    "ignore::fyst_trajectories.exceptions.PointingWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "D"]
ignore = ["D100", "D104", "D105"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D102", "D103"]
"src/fyst_trajectories/patterns/*.py" = ["D102"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pylint.messages_control]
# Disable no-member for astropy.units which uses dynamic attributes
disable = ["no-member"]
